# mprpc

./: CMakeLists.txt  README.md
example/callee/: friendservice.cc
example/caller/: callfriendservice.cc
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  rpcprovider.cc
src/include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  rpcprovider.h  zookeeperutil.h
test/: main.cc  test.proto
